Added Dash to build

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/newbuild.loader.js";
+      var loaderUrl = buildUrl + "/new-build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/newbuild.data",
-        frameworkUrl: buildUrl + "/newbuild.framework.js",
-        codeUrl: buildUrl + "/newbuild.wasm",
+        dataUrl: buildUrl + "/new-build.data",
+        frameworkUrl: buildUrl + "/new-build.framework.js",
+        codeUrl: buildUrl + "/new-build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Milestone 4",
