--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/new build.loader.js";
+      var loaderUrl = buildUrl + "/newBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/new build.data",
-        frameworkUrl: buildUrl + "/new build.framework.js",
-        codeUrl: buildUrl + "/new build.wasm",
+        dataUrl: buildUrl + "/newBuild.data",
+        frameworkUrl: buildUrl + "/newBuild.framework.js",
+        codeUrl: buildUrl + "/newBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Milestone 4",
