--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
 
     <script>
 
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var warningBanner = document.querySelector("#unity-warning");
+      var container = document.querySelector("#unity-container")
+      var canvas = document.querySelector("#unity-canvas")
+      var loadingBar = document.querySelector("#unity-loading-bar")
+      var progressBarFull = document.querySelector("#unity-progress-bar-full")
+      var fullscreenButton = document.querySelector("#unity-fullscreen-button")
+      var warningBanner = document.querySelector("#unity-warning")
 
       // Shows a temporary message banner/ribbon for a few seconds, or
       // a permanent error message on top of the canvas if type=='error'.
@@ -62,34 +62,37 @@
       // user.
       function unityShowBanner(msg, type) {
         function updateBannerVisibility() {
-          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+          warningBanner.style.display = warningBanner.children.length
+            ? "block"
+            : "none"
         }
-        var div = document.createElement('div');
-        div.innerHTML = msg;
-        warningBanner.appendChild(div);
-        if (type == 'error') div.style = 'background: red; padding: 10px;';
+        var div = document.createElement("div")
+        div.innerHTML = msg
+        warningBanner.appendChild(div)
+        if (type == "error") div.style = "background: red; padding: 10px;"
         else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
-            warningBanner.removeChild(div);
-            updateBannerVisibility();
-          }, 5000);
+          if (type == "warning")
+            div.style = "background: yellow; padding: 10px;"
+          setTimeout(function () {
+            warningBanner.removeChild(div)
+            updateBannerVisibility()
+          }, 5000)
         }
-        updateBannerVisibility();
+        updateBannerVisibility()
       }
 
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/new-build.loader.js";
+      var buildUrl = "Build"
+      var loaderUrl = buildUrl + "/WebGLBuild.loader.js"
       var config = {
-        dataUrl: buildUrl + "/new-build.data",
-        frameworkUrl: buildUrl + "/new-build.framework.js",
-        codeUrl: buildUrl + "/new-build.wasm",
+        dataUrl: buildUrl + "/WebGLBuild.data",
+        frameworkUrl: buildUrl + "/WebGLBuild.framework.js",
+        codeUrl: buildUrl + "/WebGLBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "Milestone 4",
+        productName: "Weather",
         productVersion: "0.1",
         showBanner: unityShowBanner,
-      };
+      }
 
       // By default Unity keeps WebGL canvas render target size matched with
       // the DOM size of the canvas element (scaled by window.devicePixelRatio)
@@ -101,29 +104,30 @@
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
 
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
-        container.className = "unity-mobile";
+        var meta = document.createElement("meta")
+        meta.name = "viewport"
+        meta.content =
+          "width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes"
+        document.getElementsByTagName("head")[0].appendChild(meta)
+        container.className = "unity-mobile"
 
         // To lower canvas resolution on mobile devices to gain some
         // performance, uncomment the following line:
         // config.devicePixelRatio = 1;
 
-        canvas.style.width = window.innerWidth + 'px';
-        canvas.style.height = window.innerHeight + 'px';
+        canvas.style.width = window.innerWidth + "px"
+        canvas.style.height = window.innerHeight + "px"
 
-        unityShowBanner('WebGL builds are not supported on mobile devices.');
+        unityShowBanner("WebGL builds are not supported on mobile devices.")
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        canvas.style.width = "960px"
+        canvas.style.height = "600px"
       }
 
-      loadingBar.style.display = "block";
-        var gameInstance = null;  
+      loadingBar.style.display = "block"
+      var gameInstance = null;  
      var script = document.createElement("script")
       
       script.onload = () => {
